index.css
/*dzenvikas.com___index.css*/

body{
	font: verdana,arial,helvetica,sans-serif;
	font-weight: normal;
	font-size: 16px;
    background-color: #263238;
    margin: 0px;
}

#heading{
    white-space: nowrap;
    font-size: 14px;
	color: #fff;
	background-color: #424242;

	width: 80%;
	margin-left: 10%;
	margin-right: 10%;
    height: auto;
	padding-top: 10px;
	padding-bottom: 6px;
}

#master_logo{
	position: absolute;
	width: 120px;
	height: auto;
	margin-top: 5px; 
}

#master_logo img{
	width: auto;
	height: 25px;
	border: 0px;
	margin: 0px;
	margin-left: 50%;
}

.top_bar_ul{
	position: relative;
	text-align: right;
	width: 65%;
	padding-right: 10px;
	font-weight: normal;
	margin-bottom: 10px;
	left: 17%;
}

#hire_me a{
	text-align: right;
	/*margin-left: 12%;*/
	color: #000;
	padding: 5px 5px;
	background-color: #FFB74D;
}

#hire_me a:hover{
	color: #fff;
	background-color: #E65100;
}

.top_bar_ul a{
	color: #fff;
	text-decoration: none;
	text-transform: uppercase;
	padding: 10px 10px;
}

.top_bar_ul a:link{
	color: #fff;
	text-decoration: none;
}
.top_bar_ul a:hover{
	color: #FFB74D;
	background-color: #4f4f4f;
	text-decoration: none;
}

#separator{
	background-color: #d1d1d1;
	width: auto;
	height: 3px;
	margin-left: 10%;
	margin-right: 10%;
}
#below_separator{
	width: 100%;
	height: auto;
	padding: 0;
	margin: 0;
}

.vert_nav_bar_list{
	list-style-type: none;
	background-color: #FFECB3;
	position: absolute;

	height: 100%;
	width: 15%;
	padding: 0;
	margin: 0% 0% 0% 10%;
	overflow: auto;
}

.vert_nav_bar_list a{
	display: block;
	padding: 8px 16px;
	text-decoration: none;
	color: #000;
}

.vert_nav_bar_list li a:hover{
	background-color: #555;
	color: white;
}

#disp_content{
	position: absolute;
	margin: 0 10% 0 25%;
	width: 65%;
	height: 100%;
	background-color: #FFF8E1;
	overflow: auto; /*make length of div or other infinite*/
}

#disp_content {
	text-align: left;
	height: all;
}
#disp_content h3, h4, p {
	padding-left: 3%;
	padding-right: 10%;

}

